# anobot

anobot_description/: CMakeLists.txt  package.xml
anobot_description/launch/: view_robot.launch.py
anobot_description/rviz/: view_robot.rviz
anobot_description/scripts/: dummy_odom.py
anobot_description/urdf/: anobot.urdf.xacro  anobot_agv.xacro  anobot_cell.urdf.xacro  anobot_end_effector.xacro  anobot_env.xacro  anobot_ur.xacro
anobot_interfaces/: CMakeLists.txt  package.xml
anobot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
anobot_moveit_config/config/: anobot.srdf  anobot_cell.srdf  moveit.rviz
anobot_moveit_config/launch/: move_group.launch.py  moveit_rviz.launch.py  setup_assistant.launch.py  static_virtual_joint_tfs.launch.py
anobot_scene/: package.xml  setup.cfg  setup.py
anobot_scene/anobot_scene/: apply_factory_scene.py
anobot_ur_bridge/: CMakeLists.txt  package.xml
anobot_ur_bridge/launch/: ur_bringup.launch.py
anobot_ur_bridge/src/: trajectory_until_node.cpp
anobot_ur_bridge/urdf/: anobot_ur_bridge.urdf.xacro
