<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>anobot_scene</name>
  <version>0.0.0</version>
  <description>This is the environmental scene description package for Anodizing Line Automation Robot</description>
  <maintainer email="khkoh23@gmail.com">khkoh</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>moveit_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
